fix button squishing

--- a/dw-portfolio-layout.css
+++ b/dw-portfolio-layout.css
@@ -105,7 +105,7 @@ nav {
 
 button {
     width: fit-content;
-    height: fit-content;
+    height: 45px;
     background-color: var(--color3);
     border-radius: 5px;
     font-size: 15px;
